--- a/_sass/monokai.scss
+++ b/_sass/monokai.scss
@@ -1,4 +1,4 @@
-.highlight pre { background-color: #272822; }
+.highlight pre { background-color: #272822; color: #f8f8f2; }
 .highlight .hll { background-color: #272822; }
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
@@ -63,3 +63,4 @@
 .highlight .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
 .highlight .gd { color: #f92672; } /* Generic.Deleted & Diff Deleted */
 .highlight .gi { color: #a6e22e; } /* Generic.Inserted & Diff Inserted */
+.highlight .sa { color: #e6db74} /* format string f */
